--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html xml:lang="es">
-  <head>
-    <title>Sumador</title>
-  </head>
-  <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
-    </form>
-    <div id="resultado-div"></div>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Convertidor de Números Romanos</title>
+</head>
+<body>
+    <h1>Convertidor de Números a Romanos</h1>
+    <input type="number" id="numeroInput" placeholder="Ingresa un número" min="1" max="3999">
+    <button onclick="convertirNumero()">Convertir</button>
+    <p id="resultado"></p>
 
     <script type="module" src="./src/presenter.js"></script>
-  </body>
+</body>
 </html>
